v0.11.6rc1/_sources/autoapi/ad_hoc_diffractometer/rotation/index.rst.txt
rotation
========

.. py:module:: ad_hoc_diffractometer.rotation

.. autoapi-nested-parse::

   Import: ``ad_hoc_diffractometer.rotation``

   Provides the Rodrigues rotation formula for computing 3x3 rotation matrices
   from a unit axis vector and an angle.


Functions
---------

.. autoapisummary::

   ad_hoc_diffractometer.rotation._rotation_matrix_and_derivative_normalized
   ad_hoc_diffractometer.rotation._rotation_matrix_normalized
   ad_hoc_diffractometer.rotation.rotation_matrix


Module Contents
---------------

.. py:function:: _rotation_matrix_and_derivative_normalized(n: ~numpy.ndarray, angle_deg: float) -> tuple[~numpy.ndarray, ~numpy.ndarray]

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.rotation._rotation_matrix_and_derivative_normalized``


   Compute both the rotation matrix and its derivative with respect to angle.

   Returns ``(R, dR/dtheta)`` where ``theta`` is in **radians** — the
   derivative is with respect to the radian-valued angle, not degrees.
   The caller is responsible for the deg-to-rad conversion factor
   (``pi/180``) when composing chain-rule Jacobians that take degree
   inputs.

   Uses the same Rodrigues decomposition as
   :func:`_rotation_matrix_normalized` and shares the trig values, so the
   marginal cost of the derivative is negligible.

   The derivative formula:

       dR/dtheta = -sin(theta) * (I - n (x) n) + cos(theta) * [n]_x

   :param n: **Unit** rotation axis vector.
   :type n: numpy.ndarray, shape (3,)
   :param angle_deg: Rotation angle in degrees.
   :type angle_deg: float

   :returns: * **R** (*numpy.ndarray, shape (3, 3)*) -- Rotation matrix (identical to ``_rotation_matrix_normalized``).
             * **dR_dtheta** (*numpy.ndarray, shape (3, 3)*) -- Derivative of R with respect to theta (radians).


.. py:function:: _rotation_matrix_normalized(n: ~numpy.ndarray, angle_deg: float) -> ~numpy.ndarray

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.rotation._rotation_matrix_normalized``


   Compute a rotation matrix from a pre-normalized axis vector.

   Fast path: skips the normalization step.  The caller must guarantee
   that ``n`` is a unit vector (``|n| = 1``).  Produces bit-identical
   results to :func:`rotation_matrix` when the input axis is already
   normalized.

   :param n: **Unit** rotation axis vector.
   :type n: numpy.ndarray, shape (3,)
   :param angle_deg: Rotation angle in degrees.
   :type angle_deg: float

   :returns: **R**
   :rtype: numpy.ndarray, shape (3, 3)


.. py:function:: rotation_matrix(axis: ~numpy.ndarray, angle_deg: float) -> ~numpy.ndarray

   .. container:: import-path

      Import: ``ad_hoc_diffractometer.rotation.rotation_matrix``


   Compute a right-handed rotation matrix about a unit axis vector.

   Uses the Rodrigues formula:

       R = I cos(theta) + (1 - cos(theta))(n ⊗ n) + sin(theta)[n]_x

   where [n]_x is the skew-symmetric cross-product matrix of n.

   For a left-handed rotation (e.g. eta, phi, delta in You 1999), pass the
   negated axis: rotation_matrix(-ZHAT, angle_deg).

   The sign of the axis vector encodes handedness:
   ``+n_axis`` is a right-handed rotation about ``n_axis``,
   ``-n_axis`` is left-handed (equivalent to right-handed with
   a negated angle).

   .. note::

      Here ``n_axis`` is the **per-stage rotation axis** — a property
      of how each stage is wired in its YAML definition.  Do not
      confuse it with ``n̂`` (``n_hat`` in mode ``extras``,
      :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.surface_normal`,
      :attr:`~ad_hoc_diffractometer.diffractometer.AdHocDiffractometer.azimuth`),
      which is the user-facing **reference vector** consumed by
      :class:`~ad_hoc_diffractometer.mode.ReferenceConstraint` modes.
      See the :ref:`glossary` entries for "n̂ (reference vector)" and
      "Stage rotation axis" for the disambiguation.

   :param axis: Rotation axis vector.  Need not be normalized; it will be normalized
                internally.
   :type axis: numpy.ndarray, shape (3,)
   :param angle_deg: Rotation angle in degrees (right-handed sense about the given axis).
   :type angle_deg: float

   :returns: **R** -- Orthogonal rotation matrix with det(R) = +1.
   :rtype: numpy.ndarray, shape (3, 3)

   .. rubric:: Examples

   >>> import numpy as np
   >>> from ad_hoc_diffractometer.constants import XHAT, ZHAT
   >>> rotation_matrix(XHAT, 0)          # identity
   >>> rotation_matrix(-ZHAT, 30)        # left-handed 30 deg about z


